  Misc improvements:
    - fastdwarf: new mode using debug flags, and some internal consistency fixes.
    - added a small stand-alone utility for applying and removing binary patches.
    - removebadthoughts: add --dry-run option
    - superdwarf: work in adventure mode too
    - tweak stable-cursor: carries cursor location from/to Build menu.
  New tweaks:
    - tweak military-training: speed up melee squad training up to 10x (normally 3-5x).
  New scripts:
    - binpatch: the same as the stand-alone binpatch.exe, but works at runtime.
    - region-pops: displays animal populations of the region and allows tweaking them.
    - lua: lua interpreter front-end converted to a script from a native command.
    - dfusion: misc scripts with a text based menu.
    - embark: lets you embark anywhere.
    - lever: list and pull fort levers from the dfhack console.
    - stripcaged: mark items inside cages for dumping, eg caged goblin weapons.
  New GUI scripts:
    - gui/guide-path: displays the cached path for minecart Guide orders.
    - gui/workshop-job: displays inputs of a workshop job and allows tweaking them.
    - gui/workflow: a front-end for the workflow plugin (part inspired by falconne).
    - gui/assign-rack: works together with a binary patch to fix weapon racks.
    - gui/gm-editor: an universal editor for lots of dfhack things.
    - gui/companion-order: a adventure mode command interface for your companions.
  New binary patches (for use with binpatch):
    - armorstand-capacity: doubles the capacity of armor stands.
    - custom-reagent-size: lets custom reactions use small amounts of inputs.
    - deconstruct-heapfall: stops some items still falling on head when deconstructing.
    - deconstruct-teleport: stops items from 16x16 block teleporting when deconstructing.
    - hospital-overstocking: stops hospital overstocking with supplies.
    - training-ammo: lets dwarves with quiver full of combat-only ammo train.