@@ -12,6 +12,7 @@ DFHack future
     - removebadthoughts: add --dry-run option
     - superdwarf: work in adventure mode too
     - tweak stable-cursor: carries cursor location from/to Build menu.
+    - deathcause: allow selection from the unitlist screen
   New tweaks:
     - tweak military-training: speed up melee squad training up to 10x (normally 3-5x).
   New scripts:
